# snake

./: CMakeLists.txt  README.md  assets.yml  metadata.yml  random.hpp  snake.cpp  snake.lua
.github/workflows/: build.yml
src/: Snake.cpp  Snake.hpp  Stage.cpp  Stage.hpp  StageAttract.cpp  StageAttract.hpp  StagePause.cpp  StagePause.hpp  StagePlaying.cpp  StagePlaying.hpp  StageTitle.cpp  StageTitle.hpp  main.cpp  random.hpp
tutorial/: README.md
